--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.png"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="mg ui, react, typescript, reactstrap, bootstrap, mg" />
-    <title>MG UI Showcase</title>
+    <title>HAZELNUT UI Showcase</title>
 </head>
 <body>
 <div id="content"></div>
